# rings-sim

./: .gitignore  .gitmodules  Cargo.toml  README.md  Readme.md  Vagrantfile  docker-sync.yml  nind.py  setup.sh
docker/: .dockerignore  Dockerfile
docker/bns-coturn/: Dockerfile
docker/bns-router/: Dockerfile
etc/: source.list
sim/: .gitignore  Cargo.toml
sim/src/: cmd.rs  lib.rs  main.rs
sim/tests/: test_nat.rs  test_simulator.rs
src/: lib.rs
tests/: test_connect.rs  test_ring_sim.rs
