[package]
name = "ring-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.45"
bns-node = { path = "./docker/bns-node" }
bns-core = { path = "./docker/bns-node/bns-core" }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.70"
tokio = { version = "1.13.0", features = ["full"] }
