[package]
name = "sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.13.0", features = ["full"] }
futures = "0.3.21"
async-process = "1.0.2"
log = "0.4.16"
env_logger = "0.8.3"
anyhow = "1.0.45"
bns-node = { rev = "d242f4612bff7a2f85ef32ca4d3d3cf92c1470e5", git = "https://github.com/BNSnet/bns-node.git" }
bns-core = { rev = "d242f4612bff7a2f85ef32ca4d3d3cf92c1470e5", git = "https://github.com/BNSnet/bns-node.git" }
netsim-embed = { git = "https://github.com/BNSnet/netsim-embed.git" }
netsim-embed-core = { version = "0.4.2", git = "https://github.com/BNSnet/netsim-embed.git" }
netsim-embed-machine = { version = "0.6.1", git = "https://github.com/BNSnet/netsim-embed.git" }
netsim-embed-nat = { version = "0.4.1", git = "https://github.com/BNSnet/netsim-embed.git" }
netsim-embed-router = { version = "0.4.5", git = "https://github.com/BNSnet/netsim-embed.git" }
